--- a/src/app/anime-create.html
+++ b/src/app/anime-create.html
@@ -103,16 +103,24 @@
             <div class="content2">
                 <span class="btn-change"> <i class="material-icons">desktop_windows</i></span>
                 <div class="content-card">
-                    <div class="card">
+                    <div class="the-card" id="the-card">
                         <a href="#" class="link-card">
-                            <div class="img-card">
-                                <span class="shadow-card"></span>
-                            </div>
+                            <div class="img-card"></div>
                             <div class="title-card">Yatogame-chan Kansatsu Nikki Sansatsume</div>
                         </a>
                         <span class="icon-card">
-                            <i class="material-icons">info_outline</i>
+                            <i class="material-icons" id="info">info_outline</i>
                         </span>
+                        <div class="content-info" id="content-info">
+                            <article class="info-date">
+                                <section class="title-info"></section>
+                                <section class="tags-info"></section>
+                                <section class="description-info"></section>
+                            </article>
+                            <span class="icon-info">
+                                <i class="material-icons" id="exit">close</i>
+                            </span>
+                        </div>
                     </div>
                 </div>
                 <div class="content-tag">
