--- a/src/app/assets/css/style-anime-create.css
+++ b/src/app/assets/css/style-anime-create.css
@@ -201,20 +201,109 @@ div.input-field .select-wrapper li span{
     justify-content: center;
     align-items: center;
 }
-.card{
-    width: 60%;
+.the-card{
+    width: 50%;
     height: 90%;
-    background-color: #ffffffe1;
+    position: relative;
+    background-color: #e7e7e7e1;
     border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: transform 200ms;
+    overflow: hidden;
 }
-.card:hover{
+.the-card:hover{
     transform: scale(1.04);
 }
 .link-card{
     width: 90%;
+    height: 94%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 80% 20%;
+    cursor:default;
+}
+.img-card{
+    grid-column: 1/1;
+    grid-row: 1/2;
+    background-image: url(/src/app/assets/img/boku.jpg);
+    background-size:100% 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 6px;
+}
+.title-card{
+    grid-column: 1/1;
+    grid-row: 2/3;
+    text-align: center;
+    font-size: 16px;
+    color: var(--color-data);
+    overflow: hidden;
+}
+.icon-card{
+    position: absolute;
+    top:12px;
+    right:12px;
+    padding: 6px;
+    cursor: pointer;
+    background-color: #000000c4;
+    color: #ffffff;
+}
+.content-info{
+    width: 100%;
     height: 100%;
-    margin: 0px auto;
+    position: absolute;
+    background-color: #290370;
+    top: 0;
+    transform: translateY(-100%);
+    transition: transform 400ms;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.content-info2{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #290370;
+    top: 0;
+    transition: transform 400ms;
+    transform: translateY(0);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.info-date{
+    width: 90%;
+    height: 90%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 20% 20% 1fr;
+    gap: 5px;
+}
+.title-info{
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+.tags-info{
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+.description-info{
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+.icon-info{
+    position: absolute;
+    bottom: 12px;
+    right: 12px;
+    padding: 4px;
+    cursor: pointer;
+    background-color: #000000c4;
+    color: #ffffff;
 }
 .content-tag{
     grid-column: 1/2;
