--- a/src/app/assets/css/style-anime-create.css
+++ b/src/app/assets/css/style-anime-create.css
@@ -32,7 +32,7 @@ body{
     grid-template-rows: 1fr;
     gap: 10px;
 }
-
+/* layout of the anime form */
 .anime-data{
     grid-column: 1/2;
     grid-row: 1/-1;
@@ -42,6 +42,7 @@ body{
     grid-column: 2/3;
     grid-row: 1/-1;
 }
+/* section of the anime dates */
 .content1{
     grid-column: 1/2;
     grid-row: 1/2;
@@ -52,7 +53,7 @@ body{
     margin: 0px auto;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 46px;
+    grid-template-rows: 1fr 62px;
 }
 .date-form{
     grid-column: 1/2;
@@ -137,17 +138,33 @@ div.input-field .select-wrapper li span{
     grid-column: 1/2;
     grid-row: 2/3;
     position: relative;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.cont-tags{
+    width: 60%;
+    margin: 0px 10px !important;
+}
+.btn-tag-info{
+    border-radius: 20% !important;
+    background-color: #000000c2 !important;
+    color: #ffffff;
+}
+.btn-tag-info:hover{
+    background-color: black;
 }
 .btn-data{
     position: absolute;
     right: 10px;
-    top: 2px;
+    top: 12px;
     border: none;
     background-color: var(--color-data);
     color: #ffffff;
     padding: 8px;
     font-size: 18px;
     border-radius: 10px;
+    cursor: pointer;
 }
 .btn-data:active{
     transform: scale(.9);
@@ -155,6 +172,7 @@ div.input-field .select-wrapper li span{
 .btn-data:focus{
     background-color: var(--color-data);
 }
+/* section of the example anime */
 .content2{
     width: 100%;
     height: 100%;
@@ -166,16 +184,6 @@ div.input-field .select-wrapper li span{
     grid-template-columns: 1fr;
     grid-template-rows: 80% 1fr;
 }
-/* .content2::-webkit-scrollbar{
-    width: 8px;
-}
-.content2::-webkit-scrollbar-thumb{
-    background-color: #a3a3a3;
-    border-radius: 20px;
-}
-.content2::-webkit-scrollbar-thumb:hover{
-    background-color: #7e7e7e;
-} */
 .btn-change{
     position: absolute;
     right: 20px;
@@ -202,10 +210,10 @@ div.input-field .select-wrapper li span{
     align-items: center;
 }
 .the-card{
-    width: 50%;
+    width: 48%;
     height: 90%;
     position: relative;
-    background-color: #e7e7e7e1;
+    background-color: #ffffffe1;
     border-radius: 10px;
     display: flex;
     justify-content: center;
@@ -238,6 +246,7 @@ div.input-field .select-wrapper li span{
     grid-row: 2/3;
     text-align: center;
     font-size: 16px;
+    font-family:'Hind Siliguri', sans-serif;
     color: var(--color-data);
     overflow: hidden;
 }
@@ -245,7 +254,7 @@ div.input-field .select-wrapper li span{
     position: absolute;
     top:12px;
     right:12px;
-    padding: 6px;
+    padding:2px;
     cursor: pointer;
     background-color: #000000c4;
     color: #ffffff;
@@ -267,7 +276,7 @@ div.input-field .select-wrapper li span{
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: #290370;
+    background-color: #29025c;
     top: 0;
     transition: transform 400ms;
     transform: translateY(0);
@@ -281,30 +290,68 @@ div.input-field .select-wrapper li span{
     height: 90%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 20% 20% 1fr;
+    grid-template-rows: 15% 10% 20% 1fr;
     gap: 5px;
+    color: #ffffff;
+    font-size: 16px;
 }
 .title-info{
     grid-column: 1/2;
     grid-row: 1/2;
+    display: flex;
+    text-align: center;
 }
-.tags-info{
+.raiting-info{
     grid-column: 1/2;
     grid-row: 2/3;
 }
-.description-info{
+.raiting-info i{
+    margin: 0px 10px;
+    font-size: 16px !important;
+    color: #fbcd00;
+}
+.tags-info{
     grid-column: 1/2;
     grid-row: 3/4;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.card-tag{
+    background-color:var(--color-data);
+    height: 26px;
+    color: #ffffff;
+    border-radius: 25%;
+    padding: 2px 4px;
+    font-size: 14px;
+}
+.card-tag2{
+    background-color:var(--color-area);
+    height: 26px;
+    color: #ffffff;
+    border-radius: 25%;
+    padding: 2px 4px;
+    font-size: 14px;
+}
+.description-info{
+    grid-column: 1/2;
+    grid-row: 4/5;
+    text-align:justify;
+    font-size: 14px;
 }
 .icon-info{
     position: absolute;
     bottom: 12px;
     right: 12px;
-    padding: 4px;
+    padding: 2px;
     cursor: pointer;
     background-color: #000000c4;
     color: #ffffff;
 }
+.the-card .material-icons{
+    font-size: 20px;
+}
+/* section of the content2, tags content */
 .content-tag{
     grid-column: 1/2;
     grid-row: 2/3;
