--- a/src/app/anime-create.html
+++ b/src/app/anime-create.html
@@ -96,11 +96,11 @@
                 </form>
                 <div class="content-btn">
                     <div class="input-field cont-tags">
-                        <input id="tags" type="text" class="d-input" required maxlength="16">
+                        <input id="tags" type="text" class="d-input" required maxlength="100">
                         <label for="tags">Anime tags</label>
                     </div>
                     <button class="btn tooltipped btn-tag-info" 
-                    data-position="top" data-tooltip="Press enter when you have your tag">
+                    data-position="top" data-tooltip="Press Apply when you have your info ready">
                         <i class="material-icons">help_outline</i>
                     </button>
                     <button class="btn-data">Apply</button>
@@ -114,23 +114,20 @@
                     <div class="the-card" id="the-card">
                         <a href="#" class="link-card">
                             <div class="img-card"></div>
-                            <div class="title-card">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                            <div class="title-card">Your anime title</div>
                         </a>
                         <span class="icon-card">
                             <i class="material-icons" id="info">info_outline</i>
                         </span>
                         <div class="content-info" id="content-info">
                             <article class="info-date">
-                                <section class="title-info">Yatogame-chan Kansatsu Nikki Sansatsume</section>
+                                <section class="title-info">Your anime title</section>
                                 <section class="raiting-info">
-                                    Raiting: <span>4.8</span><i class="material-icons" id="starts">star</i>
+                                    Raiting: <span>Num. example</span><i class="material-icons" id="starts">star</i>
                                 </section>
-                                <section class="tags-info">
-                                    <span class="card-tag">Tag</span>
-                                    <span class="card-tag">Tag</span>
-                                    <span class="card-tag">Tag</span>
-                                    <span class="card-tag">Tag</span>
-                                    <span class="card-tag2">Ova</span>
+                                <section class="tags-info"> 
+                                    <span class="card-tag2">Type example</span>
+                                    <span class="card-tag">Tag example</span>
                                 </section>
                                 <section class="description-info">
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis 
@@ -145,7 +142,10 @@
                     </div>
                 </div>
                 <div class="content-tag">
-                    
+                    <div class="chip">
+                        Tag example
+                        <i class="close material-icons">close</i>
+                      </div>
                 </div>
             </div>
         </section>
