--- a/src/app/assets/css/style-anime-create.css
+++ b/src/app/assets/css/style-anime-create.css
@@ -36,24 +36,23 @@ body{
 .anime-data{
     grid-column: 1/2;
     grid-row: 1/-1;
-    display: grid;
+    border: 1px solid var(--color-area);
+    border-radius: 10px;
 }
 .anime-preview{
     grid-column: 2/3;
     grid-row: 1/-1;
+    border: 1px solid var(--color-area);
+    border-radius: 10px;
 }
 /* section of the anime dates */
 .content1{
-    grid-column: 1/2;
-    grid-row: 1/2;
     width: 100%;
     height: 100%;
-    border: 1px solid var(--color-area);
-    border-radius: 10px;
-    margin: 0px auto;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 62px;
+    display: none;
 }
 .date-form{
     grid-column: 1/2;
@@ -127,7 +126,7 @@ div.input-field .select-wrapper li span{
 }
 .content-date-area{
     width: 90%;
-    height: 20%;
+    height: 10%;
     display: flex;
     justify-content: center;
 }
@@ -139,9 +138,14 @@ div.input-field .select-wrapper li span{
     justify-content: flex-start;
     align-items: center;
 }
+.content-date-btn{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
 .cont-tags{
     width: 60%;
-    margin: 0px 10px !important;
 }
 .btn-tag-info{
     border-radius: 20% !important;
@@ -170,23 +174,39 @@ div.input-field .select-wrapper li span{
 .btn-data:focus{
     background-color: var(--color-data);
 }
+.btn-save-data{
+    position: absolute;
+    left: 10px;
+    top: 12px;
+    border: none;
+    background-color:#008ddf;
+    color: #ffffff;
+    padding: 8px;
+    font-size: 18px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.btn-save-data:active{
+    transform: scale(.9);
+}
+.btn-save-data:focus{
+    background-color: #008ddf;
+}
 /* section of the example anime */
 .content2{
     width: 100%;
     height: 100%;
     position: relative;
-    border: 1px solid var(--color-area);
-    border-radius: 10px;
-    margin: 0px auto;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 80% 1fr;
+    display: none;
 }
 .btn-change{
     position: absolute;
     right: 20px;
     top: 20px;
-    padding: 10px;
+    padding: 2px 4px;
     background-color: var(--color-data);
     border-radius: 100%;
     opacity: .8;
@@ -299,13 +319,21 @@ div.input-field .select-wrapper li span{
     text-align: center;
     overflow: hidden;
 }
+.title-info span{
+    font-size: 16px !important;
+    font-family:'Hind Siliguri', sans-serif ;
+}
 .raiting-info{
     grid-column: 1/2;
     grid-row: 2/3;
+    font-size: 14px;
+}
+.raiting-info span{
+    font-size: 14px;
 }
 .raiting-info i{
     margin: 0px 2px;
-    font-size: 12px !important;
+    font-size: 14px !important;
     color: #fbcd00;
 }
 .tags-info{
@@ -365,6 +393,22 @@ div.input-field .select-wrapper li span{
     margin: 1px !important;
     background-color: var(--color-data) !important;
     color: #ffffff !important;
+}
+/* desing two for the form */
+.content1_2{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 62px;
+}
+.content2_2{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 20% 1fr;
 }
 /* property display none */
 .disable{
