desing to layout desktop

--- a/src/app/anime-create.html
+++ b/src/app/anime-create.html
@@ -194,7 +194,29 @@
                         <div class="img-header"></div>
                     </div>
                 </section>
-                <section class="content2_2-cont"></section>
+                <section class="content2_2-cont">
+                    <div class="cont-side">
+                    </div>
+                    <div class="cont-title">
+                        <span>Your title anime</span>
+                    </div>
+                    <div class="cont-tags">
+                        <span class="card-tag2">Type example</span>
+                        <span class="card-tag">Tag example</span>
+                    </div>
+                    <div class="cont-description">
+                        <span>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Quidem dolorum consectetur mollitia, facere perspiciatis 
+                            repudiandae accusamus? Nesciunt delectus temporibus officiis
+                            eius consectetur consequatur.          
+                        </span>
+                    </div>
+                    <div class="cont-chapters">
+                        <div class="title-chapter">Anime chapters</div>
+                        <div class="cont-chapter"></div>
+                    </div>
+                </section>
             </div>
         </section>
     </main>
