--- a/src/app/anime-create.html
+++ b/src/app/anime-create.html
@@ -128,7 +128,7 @@
                         <label for="second-name">Second ENG_name</label>
                     </div>
                     <div class="input-field content-date">
-                        <input id="chapters" type="number" class="d-input" required max="2">
+                        <input id="chapters" type="number" class="d-input" required max="48" min="1">
                         <label for="chapters">Anime chapters</label>
                     </div>
                 </form>
@@ -214,7 +214,40 @@
                     </div>
                     <div class="cont-chapters">
                         <div class="title-chapter">Anime chapters</div>
-                        <div class="cont-chapter"></div>
+                        <div class="cont-chapter">
+                            <div class="chapters">
+                                <article class="chapter">
+                                    <div class="img-chapter"></div>
+                                    <div class="title-chapter">
+                                        Anime chapter <span>#1</span>
+                                    </div>
+                                </article>
+                                <article class="chapter">
+                                    <div class="img-chapter"></div>
+                                    <div class="title-chapter">
+                                        Anime chapter <span>#1</span>
+                                    </div>
+                                </article>
+                                <article class="chapter">
+                                    <div class="img-chapter"></div>
+                                    <div class="title-chapter">
+                                        Anime chapter <span>#1</span>
+                                    </div>
+                                </article>
+                                <article class="chapter">
+                                    <div class="img-chapter"></div>
+                                    <div class="title-chapter">
+                                        Anime chapter <span>#1</span>
+                                    </div>
+                                </article>
+                                <article class="chapter">
+                                    <div class="img-chapter"></div>
+                                    <div class="title-chapter">
+                                        Anime chapter <span>#1</span>
+                                    </div>
+                                </article>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
