--- a/src/app/assets/css/style-anime-create.css
+++ b/src/app/assets/css/style-anime-create.css
@@ -495,7 +495,86 @@ div.input-field .select-wrapper li span{
     grid-column: 1/2;
     grid-row: 2/3;
 }
+.chapters{
+    width: 94%;
+    height: 94%;
+    margin: 0 auto;
+    overflow-y: scroll;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.chapters::-webkit-scrollbar{
+    width: 8px;
+}
+.chapters::-webkit-scrollbar-thumb{
+    background-color: #141414;
+    border-radius: 50px;
+}
+.chapter{
+    width: 90%;
+    height: 24%;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    display: grid;
+    grid-template-columns: 22% 80%;
+    grid-template-rows: 1fr;
+    gap: 2px;
+}
+.img-chapter{
+    grid-column: 1/2;
+    grid-row: 1/2;
+    background: #908b8b;
+    background-image: url(/src/app/assets/img/img-chapter3.png);
+    background-size: 60%,90%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.title-chapter{
+    grid-column: 2/-1;
+    grid-row: 1/2;
+    font-size: 16px;
+    font-family:'Hind Siliguri', sans-serif ;
+}
 /* property display none */
 .disable{
     display: none;
+}
+/* media responsive for divices small */
+@media (max-width:480px){}
+/* media responcive for divices medium small */
+@media (min-width:481px) and (max-width:720px){}
+/* media responsive for divices medium */
+@media (min-width:721px) and (max-width:992px){}
+/* media responsive for divices medium-large */
+@media (min-width:993px) and (max-width:1220px){}
+/* media responsive for divices big  */
+@media (min-width:1480px) and (max-width:1980px){
+   /* style nav content */ 
+   .container-nav{
+    height: 80px;
+    }
+    .nav-logo{
+        width: 260px;
+        height: 78px;
+    }
+    /* style main section */
+    .main{
+        width: 98%;
+        height: 88vh;
+        margin-top: 4vh;
+    }
+    /* layout of the anime form */
+    .anime-data{
+        border: 4px solid var(--color-area);
+    }
+    .anime-preview{
+        border: 4px solid var(--color-area);
+    }
+    /* section of the anime dates */
+    .content-date{
+        width: 44%;
+        height: 10%;
+    }
 }
