--- a/src/app/assets/css/style-anime-create.css
+++ b/src/app/assets/css/style-anime-create.css
@@ -243,6 +243,7 @@ div.input-field .select-wrapper li span{
 .link-card{
     width: 90%;
     height: 94%;
+    position: relative;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 80% 20%;
@@ -268,9 +269,9 @@ div.input-field .select-wrapper li span{
 }
 .icon-card{
     position: absolute;
-    top:12px;
-    right:12px;
-    padding:2px;
+    top:0px;
+    right:0px;
+    padding:4px;
     cursor: pointer;
     background-color: #000000c4;
     color: #ffffff;
@@ -573,8 +574,39 @@ div.input-field .select-wrapper li span{
         border: 4px solid var(--color-area);
     }
     /* section of the anime dates */
+    .content1{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 68px;
+    }
     .content-date{
         width: 44%;
         height: 10%;
+    }
+    .content-date label{
+        font-size: 18px !important;
+    }
+    .d-input{
+        font-size: 18px !important;
+    }
+    .input-field .btn{
+        padding: 0px 20px;
+        font-size: 18px;
+    }
+    .file-path{
+        font-size: 16px !important;
+    }
+    .content-date-check{
+        width: 44%;
+        height: 10%;
+    }
+    .content-date-check label span{
+        font-size: 20px !important;
+    }
+    .datepicker{
+        font-size: 18px !important;
+    }
+    div.input-field .select-wrapper li span{
+        font-size: 18px !important;
     }
 }
